--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 
 html {
 	scroll-padding-top: 130px;
 }
 
-.dm-serif-display-regular {
-	font-family: "DM Serif Display", serif;
-	font-weight: 400;
+.page-heading {
+	font-weight: bold;
+	font-family: "Space Grotesk", sans-serif;
+	font-optical-sizing: auto;
 	font-style: normal;
 }
 
