--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,8 +1,13 @@
 .pulse {
 	background-color: rgb(89, 89, 89);
-	border-radius: 4px;
+	border-radius: 15px;
 	position: relative;
 	overflow: hidden;
+}
+
+.loading-posts {
+	width: 60%;
+	margin: 0 auto;
 }
 
 .pulse::after {
@@ -29,62 +34,3 @@
 		transform: translateX(100%);
 	}
 }
-
-/* .pulse {
-	background: linear-gradient(90deg, darkgray, lightgray, darkgray);
-	animation: loading 2s infinite;
-}
-@keyframes loading {
-	0%,
-	100% {
-		background: linear-gradient(90deg, darkgray, lightgray, darkgray);
-	}
-	50% {
-		background: linear-gradient(90deg, lightgray, darkgray, lightgray);
-	}
-} */
-
-/* .pulse {
-	background-size: 200% 100%;
-	background-image: linear-gradient(
-		90deg,
-		darkgray,
-		lightgray,
-		darkgray,
-		lightgray
-	);
-	animation: loading 4s linear infinite;
-}
-
-@keyframes loading {
-	0% {
-		background-position: 0% 50%;
-	}
-	100% {
-		background-position: 200% 50%;
-	}
-}
-
-/* .pulse {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: linear-gradient(
-		90deg,
-		rgba(255, 255, 255, 0) 0%,
-		rgba(255, 255, 255, 0.5) 50%,
-		rgba(255, 255, 255, 0) 100%
-	);
-	animation: loading 1.5s infinite ease-in-out;
-}
-
-@keyframes loading {
-	0% {
-		transform: translateX(-100%);
-	}
-	100% {
-		transform: translateX(100%);
-	}
-} */
