--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,10 +1,10 @@
 .main-wrapper {
-	padding: 100px 300px 200px 300px;
-	border: 1px solid black;
+	padding: 100px 250px 200px 250px;
 	margin: 90px;
 	border-radius: 15px;
-	background: rgba(0, 0, 0, 0.9);
+	background: rgb(29, 29, 29);
 	color: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.313);
 }
 
 h2 {
@@ -47,15 +47,16 @@ img {
 	padding: 30px 0px;
 }
 
-.main-wrapper > ul:nth-child(11) {
-	border: 1px solid rgba(255, 255, 255, 0.7);
-	padding: 40px;
-	width: 50%;
+.main-wrapper > ul:nth-child(12) {
+	background: rgba(255, 255, 255, 0.2);
+	padding: 20px 40px;
+	width: 40%;
 	border-radius: 4px;
 	margin: 10px 0px 0px 0px;
+	list-style-type: none;
 }
 
-.main-wrapper > p:nth-child(9) > img:nth-child(1) {
+.main-wrapper > p:nth-child(10) > img:nth-child(1) {
 	border: 1px solid white;
 	margin: 30px auto;
 }
@@ -75,4 +76,8 @@ img {
 
 li {
 	padding: 10px 0px;
+}
+
+#loading-window {
+	height: 100vh;
 }
