--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,12 +1,3 @@
-.main-wrapper {
-	padding: 100px 250px 200px 250px;
-	margin: 90px;
-	border-radius: 15px;
-	background: rgb(29, 29, 29);
-	color: rgba(255, 255, 255, 0.7);
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.313);
-}
-
 h2 {
 	padding-bottom: 40px;
 }
@@ -52,11 +43,20 @@ img {
 
 .main-wrapper > ul:nth-child(12) {
 	background: rgba(255, 255, 255, 0.2);
-	padding: 20px 40px;
-	width: 40%;
+	padding: 20px;
 	border-radius: 4px;
 	margin: 10px 0px 0px 0px;
 	list-style-type: none;
+}
+
+.main-wrapper > ul:nth-child(12) li {
+	padding: 10px 20px;
+	border-radius: 5px;
+	transition: all 0.3s;
+}
+
+.main-wrapper > ul:nth-child(12) li:hover {
+	background: rgba(209, 141, 32, 0.2);
 }
 
 .main-wrapper > p:nth-child(10) > img:nth-child(1) {
